添加博客与更新主题并把评论插件更换为gitment

--- a/themes/indigo/layout/_partial/post/comment.ejs
+++ b/themes/indigo/layout/_partial/post/comment.ejs
@@ -1,13 +1,8 @@
 <% if(post.comments){ %>
-<%- partial('../plugins/duoshuo', {
-    key: post.slug,
-    title: post.title,
-    url: url
-  }) %>
 
 <%- partial('../plugins/disqus') %>
 
 <%- partial('../plugins/uyan') %>
 
-<%- partial('../plugins/wangyi') %>
+<%- partial('../plugins/gitment') %>
 <%} %>
