--- a/themes/indigo/layout/_partial/index-item.ejs
+++ b/themes/indigo/layout/_partial/index-item.ejs
@@ -4,7 +4,6 @@
     <div class="post-meta">
         <%- partial('post/date', {date_format: config.date_format}) %>
         <%- partial('post/category') %>
-        <%- partial('plugins/duoshuo-count') %>
     </div>
 
     <%- partial('post/title', { hasLink: true }) %>
@@ -20,7 +19,7 @@
     <% } %>
 
         <a href="<%- url_for(post.path) %>" class="post-more waves-effect waves-button">
-            <%-theme.excerpt_link%>
+            <%= __('post.continue_reading') %>
         </a>
     </div>
     <% if(post.tags && post.tags.length){ %>
