--- a/themes/indigo/layout/_partial/script.ejs
+++ b/themes/indigo/layout/_partial/script.ejs
@@ -1,16 +1,16 @@
 <script src="//cdn.bootcss.com/node-waves/0.7.4/waves.min.js"></script>
 <script>
 var BLOG = { ROOT: '<%= config.root %>', SHARE: <%- theme.share %>, REWARD: <%- Boolean(page.reward) %> };
-<%- partial('plugins/duoshuo-js', { enabled: theme.duoshuo_count }) %>
+
 <% if (theme.cnzz){ %>
 lazyScripts.push('//s95.cnzz.com/z_stat.php?id=<%-theme.cnzz %>&web_id=<%-theme.cnzz %>')
 <% } %>
 </script>
 
-<script src="<%- url_for('/js/main' + (cache ? '.min': '') + '.js?v=' + theme_version()) %>"></script>
+<script src="<%- url_for(theme_js('/js/main', cache)) %>"></script>
 <% if (theme.search){ %>
 <%- partial('search') %>
-<script src="<%- url_for('/js/search' + (cache ? '.min': '') + '.js?v=' + theme_version()) %>" async></script>
+<script src="<%- url_for(theme_js('/js/search', cache)) %>" async></script>
 <% } %>
 
 <%- partial('plugins/mathjax') %>
