--- a/themes/indigo/layout/_partial/plugins/gitment.ejs
+++ b/themes/indigo/layout/_partial/plugins/gitment.ejs
@@ -1,8 +1,8 @@
 <% if (theme.gitment){ %>
 <section class="comments" id="comments">
     <div id="gitment_thread"></div>
-    <link rel="stylesheet" href="//unpkg.com/gitment/style/default.css">
-    <script src="//unpkg.com/gitment/dist/gitment.browser.js"></script>
+    <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+    <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
         var gitment = new Gitment({
             id: location.pathname,
