--- a/themes/indigo/layout/_partial/footer.ejs
+++ b/themes/indigo/layout/_partial/footer.ejs
@@ -4,7 +4,7 @@
             <%- partial('plugins/site-visit') %>
             <span>Power by <a href="http://ystyle.top/" target="_blank">东方星痕</a></span>
             <span><%-config.title %> &copy; <%if (theme.since_year && theme.since_year < date(new Date(), 'YYYY')) {%><%- theme.since_year %> - <%}%><%- date(new Date(), 'YYYY') %></span>
-            <span><a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021106688号</a></span>
+            <span><a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021106688号-1</a></span>
         </p>
     </div>
 </footer>
