--- a/themes/indigo/layout/_partial/footer.ejs
+++ b/themes/indigo/layout/_partial/footer.ejs
@@ -5,11 +5,11 @@
             <span>Power by <a href="http://ystyle.top/" target="_blank">东方星痕</a></span>
             <span><%-config.title %> &copy; <%if (theme.since_year && theme.since_year < date(new Date(), 'YYYY')) {%><%- theme.since_year %> - <%}%><%- date(new Date(), 'YYYY') %></span>
             <span><a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021106688号-1</a></span>
-            <div style="width:300px;margin:0 auto; padding:20px 0;">
+            <span style="width:300px;margin:0 auto; padding:20px 0;">
               <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44010502002055" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
                 <img src="/img/record-icon.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">粤公网安备 44010502002055号</p>
               </a>
-            </div>
+            </span>
         </p>
     </div>
 </footer>
