--- a/themes/indigo/layout/_partial/footer.ejs
+++ b/themes/indigo/layout/_partial/footer.ejs
@@ -7,7 +7,10 @@
             <span><a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2021106688号-1</a></span>
             <span style="width:300px;margin:0 auto; padding:20px 0;">
               <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44010502002055" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
-                <img src="/img/record-icon.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">粤公网安备 44010502002055号</p>
+                <img src="/img/record-icon.png" style="float:left;"/>
+                <span style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">
+                  粤公网安备 44010502002055号
+                </span>
               </a>
             </span>
         </p>
